# boids

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  boids.js  boids.wasm  cmake_install.cmake  compile_commands.json  index.html
.github/workflows/: cmake.yml
src/: Util.h  main.cpp
src/App/: App.cpp  App.h
src/Boid/: Boid.cpp  Boid.h
src/Fish/: Fish.cpp  Fish.h
src/Segment/: Segment.cpp  Segment.h
src/Spine/: Spine.cpp  Spine.h
